force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>DocuSign Envelopes</relationshipLabel>
    <relationshipName>DocuSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>