force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/of_Documents__c.field-meta.xml
<CustomField>
    <fullName>of_Documents__c</fullName>
    <label># of Documents</label>
    <summaryForeignKey>dsfs__DocuSign_Envelope_Document__c.dsfs__DocuSign_EnvelopeID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>