force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/Recipient_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Sent_Date__c</fullName>
    <label>Recipient Sent Date</label>
    <type>DateTime</type>
</CustomField>