force-app/main/default/objects/dsfs__DocuSign_Envelope__c/fields/RecipientDateDelivered__c.field-meta.xml
<CustomField>
    <fullName>RecipientDateDelivered__c</fullName>
    <label>Recipient Delivered Date</label>
    <type>DateTime</type>
</CustomField>